# neural-networks

./: .gitmodules  CMakeLists.txt  README.md
app/src/: main.cpp
core/: CMakeLists.txt
core/include/: window.h
core/src/: window.cpp
modules/: CMakeLists.txt
modules/app/: CMakeLists.txt
modules/app/includes/: dodger.h  generated_object.h  object_buffer.h  player.h  utils.h
modules/app/resources/shaders/default/: vertex.glsl
modules/app/resources/shaders/ray/: fragment.glsl  vertex.glsl
modules/app/src/: dodger.cpp  generated_object.cpp  main.cpp  object_buffer.cpp  player.cpp  utils.cpp
modules/core/: CMakeLists.txt
modules/core/include/: core.h  font_manager.h  game.h  keyboard_manager.h  keys.h  object.h  ray_caster.h  resource_manager.h  shader.h  shape.h  window.h
modules/core/include/primitives/: circle.h  primitives.h  rectangle.h  triangle.h
modules/core/src/: font_manager.cpp  game.cpp  keyboard_manager.cpp  object.cpp  primitives.cpp  ray_caster.cpp  resource_manager.cpp  shader.cpp  shape.cpp  window.cpp
modules/core/src/primitives/: circle.cpp  primitives.cpp  rectangle.cpp  triangle.cpp
vendors/: CMakeLists.txt
vendors/glad/: CMakeLists.txt
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
